objects/Meter_History__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Installed_Product__c</fullName>
        <label>Installed Product</label>
        <referenceTo>SVMXC__Installed_Product__c</referenceTo>
        <relationshipName>Meter_Histories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Meter_Reading__c</fullName>
        <label>Meter Reading</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reading_Date__c</fullName>
        <label>Reading Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up to the WO where the meter reading was entered.</description>
        <label>Work Order</label>
        <referenceTo>SVMXC__Service_Order__c</referenceTo>
        <relationshipLabel>Meter History</relationshipLabel>
        <relationshipName>Meter_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Meter History</label>
    <nameField>
        <displayFormat>MH-{000000}</displayFormat>
        <label>Meter History ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meter History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>